# eib-spellchecker

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.torch  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
artifacts/lexical/ash/: manifest.json  model.json
artifacts/lexical/shi/: manifest.json  model.json
artifacts/lexical/ya/: manifest.json  model.json
artifacts/lexical/yi/: manifest.json  model.json
configs/: ash.yaml  ash_subword.yaml  ash_torch.yaml  ashaninka.yaml  demo.yaml  demo_subword.yaml  demo_torch.yaml  shi.yaml  shipibo_konibo.yaml  ya.yaml  yanesha.yaml  yi.yaml  yine.yaml
data/: README.md
data/corpora/: README.md  ash.txt  shi.txt  ya.txt  yi.txt
data/samples/: README.md
docs/: BENCHMARKS.md  DEPLOY.md  MIGRATION.md  MODEL_BACKENDS.md  PRESENTATION.md  RUNBOOK.md  VALIDATION.md
examples/: benchmark_suite.yaml  demo_corpus.txt  demo_pairs.tsv
reports/: ash_common_200.json  ash_keyboard_200.json  demo_subword_clean.json  demo_subword_open_vocab.json  shi_keyboard_200.json  shi_syllable_200.json  suite_200.json
scripts/: import_legacy_assets.py  import_legacy_repo.py  validate.sh
src/eib_spellchecker/: __init__.py  api.py  cli.py  config.py
tests/: test_api.py  test_benchmark_csv.py  test_benchmark_suite.py  test_evaluation.py  test_excels_inventory.py  test_inventory.py  test_lexical_backend.py  test_package_seq2seq.py  test_pairs_csv.py  test_research_inventory.py  test_robustness.py  test_score_parser.py  test_subword_backend.py  test_torch_reranker.py
(+154 files in other folders)
