[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eib-spellchecker"
version = "0.6.0"
description = "Corrector ortográfico EIB con backend subword, políticas de seguridad, benchmark de robustez y guía completa de ejecución."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "César Lara Avila", email = "claraa@uni.edu.pe" }
]
dependencies = [
  "fastapi>=0.111,<1.0",
  "pydantic>=2.7,<3.0",
  "PyYAML>=6.0,<7.0",
  "uvicorn>=0.30,<1.0",
  "numpy>=1.26,<3.0",
  "pandas>=2.2,<3.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.0,<10.0"
]
research = [
  "h5py>=3.10,<4.0"
]
tensorflow = [
  "tensorflow>=2.15,<3.0"
]
torch = [
  "torch>=2.2,<3.0"
]
demo = [
  "gradio>=5.0,<6.0"
]

[project.scripts]
eib-spellchecker = "eib_spellchecker.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
